# url-shortener

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/api/endpoints/: analytics.py  auth.py  redirect.py  url.py
backend/core/: auth.py  config.py  redis.py  security.py
backend/db/: session.py
backend/geoipdata/: read-me.txt
backend/middleware/: rate_limit.py
backend/models/: models.py
backend/schemas/: url.py
backend/services/: analytics.py  device_parser.py  geoip.py  rabbitmq.py  rate_limit.py  url_resolver.py  url_service.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_logout.py  test_redirect.py  test_urls.py
backend/utils/: base62.py  shortener.py  token_blacklist.py  user_repo.py
backend/workers/: click_consumer.py  click_publisher.py  worker.py
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Navbar.jsx  ThemeToggle.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Register.jsx
frontend/src/utils/: api.js
