[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "geoip2>=5.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "user-agents>=2.2.0",
]
